--- a/client/templates/includes/header.html
+++ b/client/templates/includes/header.html
@@ -7,12 +7,18 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="{{pathFor 'postsList'}}">Microscope</a>
+      <a class="navbar-brand" href="{{pathFor 'postsList'}}">Coffix</a>
     </div>
     <div class="collapse navbar-collapse" id="navigation">
     <ul class="nav navbar-nav">
     	<li><a href="{{pathFor 'postSubmit'}}">Submit Post</a></li>
-    </ul> 
+    </ul>
+    <ul class="nav navbar-nav">
+      <li><a href="{{pathFor 'placeOrder'}}">Place Order</a></li>
+    </ul>
+        <ul class="nav navbar-nav">
+      <li><a href="{{pathFor 'viewOrders'}}">View Orders</a></li>
+    </ul>
       <ul class="nav navbar-nav navbar-right">
         {{> loginButtons}}
       </ul>
