added view extras and usernames to orders

--- a/client/templates/orders/view_orders.html
+++ b/client/templates/orders/view_orders.html
@@ -1,12 +1,16 @@
 <template name="viewOrders">
 	<div class="posts">
 	<table class="table">
-			<th>Coffee Type</th><th>Milk Type</th><th>Extras</th><th>Remove</th>
+			<th>User</th><th>Coffee Type</th><th>Milk Type</th><th>Extras</th><th>Remove</th>
 		{{#each orders}}
 			
-			<tr><td>{{type}}</td><td>{{milk}}</td><td>{{> extras}}</td><td><input type="button" name="remove" value="X"></td></tr>
+			<tr><td>{{userName}}</td><td>{{type}}</td><td>{{milk}}</td><td>{{> extras}}</td><td><input type="button" name="remove" value="X"></td></tr>
 			
 		{{/each}}
 	</table>
 	</div>
+</template>
+
+<template name='extras'>
+	{{#each extras}}<li>{{.}}</li>{{/each}}
 </template>
