added basic dynamic ordering

--- a/client/templates/orders/place_order.html
+++ b/client/templates/orders/place_order.html
@@ -15,20 +15,20 @@
     <option>No Milk</option>
     <option>Soy Milk</option>
   </select>
-
+<div id="extraArea">
 <div class="checkbox">
   <label>
-    <input type="checkbox" value="" name="sugar">
+    <input type="checkbox" value="sugar" name="sugar">
     Sugar
   </label>
 </div>
 <div class="checkbox">
   <label>
-    <input type="checkbox" value="" name="almond">
+    <input type="checkbox" value="almond" name="almond">
     Almond Syrup
   </label>
 </div>
-
+</div>
 </div>
 
 <input type="submit" value="Order" class="btn btn-primary"/>
