--- a/client/templates/orders/place_order.html
+++ b/client/templates/orders/place_order.html
@@ -1,6 +1,7 @@
 <template name="placeOrder">
   <form class="main form page">
 	<div class="form-group">
+    <div id="orderArea">
   <label for="sel1">Coffee:</label>
   <select class="form-control" id="sel1" name="type">
     <option>Flat White</option>
@@ -15,16 +16,17 @@
     <option>No Milk</option>
     <option>Soy Milk</option>
   </select>
+  </div>
 <div id="extraArea">
 <div class="checkbox">
   <label>
-    <input type="checkbox" value="sugar" name="sugar">
+    <input type="checkbox" value="sugar" name="Sugar">
     Sugar
   </label>
 </div>
 <div class="checkbox">
   <label>
-    <input type="checkbox" value="almond" name="almond">
+    <input type="checkbox" value="almond" name="Almond Syrup">
     Almond Syrup
   </label>
 </div>
