--- a/client/templates/includes/header.html
+++ b/client/templates/includes/header.html
@@ -14,9 +14,19 @@
     <ul class="nav navbar-nav">
       <li><a href="{{pathFor 'placeOrder'}}">Place Order</a></li>
     </ul>
-        <ul class="nav navbar-nav">
-      <li><a href="{{pathFor 'viewOrders'}}">View Orders</a></li>
+    <ul class="nav nav-tabs">
+    <li role="presentation" class="dropdown">
+    <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+      Admin <span class="caret"></span>
+    </a>
+    
+    <ul class="dropdown-menu">
+     <li><a href="{{pathFor 'viewOrders'}}">Current Orders</a></li>
+      <li><a href="{{pathFor 'viewAllOrders'}}">All Orders</a></li>
     </ul>
+  </li>
+        </ul>
+
       <ul class="nav navbar-nav navbar-right">
         {{> loginButtons}}
       </ul>
