--- a/client/templates/orders/view_all_orders.html
+++ b/client/templates/orders/view_all_orders.html
@@ -1,11 +1,12 @@
-<template name="viewOrders">
+<template name="viewAllOrders">
+	
 	<div class="posts">
 	<table class="table">
-			<th>User</th><th>Coffee Type</th><th>Milk Type</th><th>Extras</th><th>Complete</th>
+			<th>User</th><th>Coffee Type</th><th>Milk Type</th><th>Extras</th><th>Remove</th>
 		{{#each orders}}
 			
 			<tr><td>{{userName}}</td>{{> mainOrder}}<td>{{> extras}}</td><td><button type="button" name="remove" class="btn btn-default btn-lg">
-  <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
+  <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
 </button>
 			</td></tr>
 			
@@ -22,4 +23,5 @@
 	{{#each theOrder}}
 	<td>{{.}}</td>
 	{{/each}}
+
 </template>
