added basic dynamic order items

--- a/client/templates/orders/place_order.html
+++ b/client/templates/orders/place_order.html
@@ -4,10 +4,7 @@
     <div id="orderArea">
   <label for="sel1">Coffee:</label>
   <select class="form-control" id="sel1" name="type">
-    <option>Flat White</option>
-    <option>Espresso</option>
-    <option>Long Black</option>
-    <option>Another one</option>
+{{> displayItems}}
   </select>
 
   <label for="sel1">Milk:</label>
