--- a/client/templates/items/new_item.html
+++ b/client/templates/items/new_item.html
@@ -1,4 +1,5 @@
 <template name="newItem">
+
   <form class="main form page">
 	<div class="form-group">
       <div class="input-group">
@@ -6,6 +7,7 @@
     </div>
 </div>
 
-<input type="submit" value="Order" class="btn btn-primary"/>
+<input type="submit" value="Add Item" class="btn btn-primary"/>
   </form>
+
 </template>
