--- a/client/templates/orders/view_all_orders.html
+++ b/client/templates/orders/view_all_orders.html
@@ -5,7 +5,7 @@
 			<th>User</th><th>Coffee Type</th><th>Milk Type</th><th>Extras</th><th>Remove</th>
 		{{#each orders}}
 			
-			<tr><td>{{userName}}</td>{{> mainOrder}}<td>{{> extras}}</td><td><button type="button" name="remove" class="btn btn-default btn-lg">
+			<tr><td>{{userName}}</td>{{> allMainOrder}}<td>{{> allExtras}}</td><td><button type="button" name="remove" class="btn btn-default btn-lg">
   <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
 </button>
 			</td></tr>
@@ -15,11 +15,11 @@
 	</div>
 </template>
 
-<template name='extras'>
+<template name='allExtras'>
 	{{#each extras}}<li>{{.}}</li>{{/each}}
 </template>
 
-<template name='mainOrder'>
+<template name='allMainOrder'>
 	{{#each theOrder}}
 	<td>{{.}}</td>
 	{{/each}}
