added admin only navbar

--- a/client/templates/includes/header.html
+++ b/client/templates/includes/header.html
@@ -1,35 +1,46 @@
 <template name="header">
-  <nav class="navbar navbar-default" role="navigation">
+
+
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navigation">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="{{pathFor 'home'}}">Coffix</a>
+      <a class="navbar-brand" href="/">Coffix</a>
     </div>
-    <div class="collapse navbar-collapse" id="navigation">
 
-    <ul class="nav navbar-nav">
-      <li><a href="{{pathFor 'placeOrder'}}">Place Order</a></li>
-    </ul>
-    <ul class="nav nav-tabs">
-    <li role="presentation" class="dropdown">
-    <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-      Admin <span class="caret"></span>
-    </a>
-    
-    <ul class="dropdown-menu">
-     <li><a href="{{pathFor 'viewOrders'}}">Current Orders</a></li>
-      <li><a href="{{pathFor 'viewAllOrders'}}">All Orders</a></li>
-    </ul>
-  </li>
-        </ul>
-
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+    <div class="row">
+      <ul class="nav navbar-nav">
+        <li> <a href="{{pathFor 'placeOrder'}}">Place Order</a></li>
+        
+      </ul>
       <ul class="nav navbar-nav navbar-right">
         {{> loginButtons}}
       </ul>
+
+      </div>
+{{#if isInRole 'admin'}}
+    <div class="row">
+      <ul class="nav navbar-nav">
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Orders<span class="caret"></span></a>
+          <ul class="dropdown-menu">
+                <li><a href="{{pathFor 'viewOrders'}}">Current Orders</a></li>
+                <li><a href="{{pathFor 'viewAllOrders'}}">All Orders</a></li>
+          </ul>
+        </li>
+      </ul>
     </div>
-  </nav>
+{{/if}}
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+
 </template>
