--- a/client/templates/items/new_item.html
+++ b/client/templates/items/new_item.html
@@ -1,13 +1,5 @@
 <template name="newItem">
 
-  <form class="main form page">
-	<div class="form-group">
-      <div class="input-group">
-        <input id="item" type="text" class="form-control" placeholder="Item Name" aria-describedby="basic-addon1">
-    </div>
-</div>
-
-<input type="submit" value="Add Item" class="btn btn-primary"/>
-  </form>
+{{> quickForm collection="Books" id="insertBookForm" type="insert"}}
 
 </template>
