fixed autoform for items

--- a/client/templates/items/new_item.html
+++ b/client/templates/items/new_item.html
@@ -1,5 +1,5 @@
 <template name="newItem">
 
-{{> quickForm collection="Books" id="insertBookForm" type="insert"}}
+{{> quickForm collection="ItemNames" id="insertItems" type="insert"}}
 
 </template>
