added schemas, still need to fix updating orders

--- a/client/templates/includes/header.html
+++ b/client/templates/includes/header.html
@@ -37,6 +37,17 @@
           </ul>
         </li>
       </ul>
+
+      <ul class="nav navbar-nav">
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Edit<span class="caret"></span></a>
+          <ul class="dropdown-menu">
+                <li><a href="{{pathFor 'newItem'}}">Edit Items</a></li>
+                <li><a href="{{pathFor 'newExtra'}}">Edit Extras</a></li>
+          </ul>
+        </li>
+      </ul>
+
     </div>
 {{/if}}
     </div><!-- /.navbar-collapse -->
