--- a/client/templates/orders/place_order.html
+++ b/client/templates/orders/place_order.html
@@ -33,8 +33,11 @@
 <input type="submit" value="Order" class="btn btn-primary"/>
   </form> -->
 
-{{#autoForm collection="Orders" type="insert" id="FieldValueIsForm"}}
+{{#autoForm collection="Orders" type="insert" id="newOrderForm"}}
+  {{> afQuickField name="mainOrder" options=mainList}}
+
   {{> afQuickField name="extras" options=extraList }}
+  <button type="submit" class="btn btn-primary">Place Order</button>
 {{/autoForm}}
 
 </template>
