--- a/client/templates/orders/view_orders.html
+++ b/client/templates/orders/view_orders.html
@@ -4,7 +4,7 @@
 			<th>User</th><th>Coffee Type</th><th>Milk Type</th><th>Extras</th><th>Complete</th>
 		{{#each orders}}
 			
-			<tr><td>{{userName}}</td>{{> mainOrder}}<td>{{> extras}}</td><td><button type="button" name="remove" class="btn btn-default btn-lg">
+			<tr><td>{{userName}}</td><td>{{mainOrder}}</td><td>Milk Type</td><td>{{extras}}</td><td><button type="button" name="remove" class="btn btn-default btn-lg">
   <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
 </button>
 			</td></tr>
@@ -18,8 +18,8 @@
 	{{#each extras}}<li>{{.}}</li>{{/each}}
 </template>
 
-<template name='mainOrder'>
-	{{#each theOrder}}
+<!-- <template name='mainOrder'>
+	{{#each mainOrder}}
 	<td>{{.}}</td>
 	{{/each}}
-</template>
+</template> -->
