on the way to making a delete popup work. No idea with cursors though...

--- a/client/templates/orders/view_all_orders.html
+++ b/client/templates/orders/view_all_orders.html
@@ -2,21 +2,17 @@
 	
 	<div class="posts">
 	<table class="table">
-			<th>User</th><th>Coffee Type</th><th>Milk Type</th><th>Extras</th><th>Remove</th>
+			<th>User</th><th>Coffee Type</th><th>Milk Type</th><th>Extras</th><th>Complete</th>
 		{{#each orders}}
 			
-			<tr><td>{{userName}}</td>{{> allMainOrder}}<td>{{> allExtras}}</td><td><button type="button" name="remove" class="btn btn-default btn-lg">
-  <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+			<tr><td>{{userName}}</td><td>{{mainOrder}}</td><td>Milk Type</td><td>{{extras}}</td><td><button type="button" name="remove" class="btn btn-default btn-lg">
+  <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
 </button>
 			</td></tr>
 			
 		{{/each}}
 	</table>
 	</div>
-</template>
-
-<template name='allExtras'>
-	{{#each extras}}<li>{{.}}</li>{{/each}}
 </template>
 
 <template name='allMainOrder'>
