--- a/client/templates/orders/view_all_orders.html
+++ b/client/templates/orders/view_all_orders.html
@@ -1,5 +1,5 @@
 <template name="viewAllOrders">
-	
+<h1>All Orders</h1>
 	<div class="posts">
 	<table class="table">
 			<th>User</th><th>Coffee Type</th><th>Milk Type</th><th>Extras</th><th>Complete</th>
