--- a/client/templates/orders/view_orders.html
+++ b/client/templates/orders/view_orders.html
@@ -1,4 +1,5 @@
 <template name="viewOrders">
+<h1>Current Orders</h1>
 	<div class="posts">
 	<table class="table">
 			<th>User</th><th>Coffee Type</th><th>Milk Type</th><th>Extras</th><th>Complete</th>
