--- a/client/templates/items/new_item.html
+++ b/client/templates/items/new_item.html
@@ -1,5 +1,5 @@
 <template name="newItem">
-
+<h1>Edit Items</h1>
 {{> quickForm collection="ItemNames" id="insertItems" type="insert"}}
 
 </template>
