--- a/client/templates/orders/my_orders.html
+++ b/client/templates/orders/my_orders.html
@@ -1,3 +1,14 @@
 <template name="myOrders">
-	Here are your orders...
+<h1>Your Orders</h1>
+	<table class="table">
+			<th>User</th><th>Coffee Type</th><th>Milk Type</th><th>Extras</th><th>Cancel Order</th>
+		{{#each myOrder}}
+			
+			<tr><td>{{userName}}</td><td>{{mainOrder}}</td><td>Milk Type</td><td>{{extras}}</td><td><button type="button" name="cancel" class="btn btn-danger btn-sm">
+  <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+</button>
+			</td></tr>
+			
+		{{/each}}
+	</table>
 </template>
