--- a/client/templates/orders/place_order.html
+++ b/client/templates/orders/place_order.html
@@ -4,6 +4,8 @@
   {{> afQuickField name="mainOrder" options=mainList}}
 
   {{> afQuickField name="extras" options=extraList }}
+
+  {{> afQuickField name="collectTime" type="time"}}
   <button type="submit" class="btn btn-primary">Place Order</button>
 {{/autoForm}}
 
