--- a/client/templates/orders/place_order.html
+++ b/client/templates/orders/place_order.html
@@ -5,7 +5,7 @@
 
   {{> afQuickField name="extras" options=extraList }}
 
-  {{> afQuickField name="collectTime" type="time"}}
+  {{> afQuickField name="collectTime" type="time" value=serverTime}}
   <button type="submit" class="btn btn-primary">Place Order</button>
 {{/autoForm}}
 
