added ordering button colours

--- a/client/templates/home/home.html
+++ b/client/templates/home/home.html
@@ -1,7 +1,7 @@
 <template name="home">
 <div class="jumbotron" style="background-image:url('http://www.theinvestigators.co.nz/assets/Uploads/coffee-beans.jpg')">
   <h1 style="color:white;">Fresh Coffee at you fingertips!</h1>
-  <p style="color:white;">Place an order for collection now, or for orders over $100 we can deliver free within the Newmarket area.</p>
+  <p style="color:white;">Place an order now for collection today!</p>
   <p><a class="btn btn-primary btn-lg" href="{{pathFor 'placeOrder'}}" role="button">Order Now</a></p>
 </div>
 </template>
