--- a/client/templates/orders/view_all_orders.html
+++ b/client/templates/orders/view_all_orders.html
@@ -5,7 +5,7 @@
 			<th>User</th><th>Coffee Type</th><th>Milk Type</th><th>Extras</th><th>Delete</th>
 		{{#each orders}}
 			
-			<tr><td>{{userName}}</td><td>{{mainOrder}}</td><td>Milk Type</td><td>{{extras}}</td><td><button type="button" name="remove" class="btn btn-danger btn-lg">
+			<tr style="{{isCancelled}}"><td>{{userName}}</td><td>{{mainOrder}}</td><td>Milk Type</td><td>{{extras}}</td><td><button type="button" name="remove" class="btn btn-danger btn-lg">
   <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
 </button>
 			</td></tr>
