--- a/client/templates/includes/header.html
+++ b/client/templates/includes/header.html
@@ -21,6 +21,10 @@
         <li> <a href="{{pathFor 'placeOrder'}}">Place Order</a></li>
         
       </ul>
+      <ul class="nav navbar-nav">
+        <li> <a href="{{pathFor 'myOrders'}}">My Orders</a></li>
+        
+      </ul>
       <ul class="nav navbar-nav navbar-right">
         {{> loginButtons}}
       </ul>
